chore: update drawer image url

--- a/components/drawer/style/component.scss
+++ b/components/drawer/style/component.scss
@@ -37,7 +37,7 @@
     width: 33px;
     height: 52px;
     padding: 0;
-    background-image: url('../../components/drawer/style/tab-first@2x.png');
+    background-image: url('../style/images/tab-first@2x.png');
     background-size: 33px 52px;
     background-color: transparent;
     cursor: pointer;
