--- a/site/components/SideBar/style.scss
+++ b/site/components/SideBar/style.scss
@@ -10,47 +10,10 @@
   overflow-y: scroll;
   z-index: 100;
 
-  .za-menu {
-    border-right-width: 0;
-  }
-
-  .za-menu-submenu-title {
-    &:hover {
-      color: #00bc70;
-
-      .za-menu-submenu-arrow {
-        &:before,
-        &:after {
-          background: linear-gradient(to right, #00bc70, #00bc70);
-        }
-      }
-    }
-  }
-
-  .za-menu-item {
-    a {
-      color: #666;
-      outline: none;
-    }
-
+  .zw-menu-item {
     .chinese {
       margin-left: 6px;
       opacity: .6;
-    }
-
-    &:hover,
-    &.selected,
-    &.active {
-      color: #00bc70;
-
-      a {
-        color: #00bc70;
-      }
-    }
-
-    &.selected,
-    &.active {
-      background: rgba(18, 194, 135, .1);
     }
   }
 }
