--- a/components/menu/style/dark-theme.scss
+++ b/components/menu/style/dark-theme.scss
@@ -57,6 +57,7 @@
 
     @include b(menu-item) {
       color: var(--menuitem-dark-color);
+      background: var(--menu-dark-bg-color);
 
       &:hover {
         color: var(--menuitem-active-color);
