style: refine the style when there is no title

--- a/components/notification/style/index.scss
+++ b/components/notification/style/index.scss
@@ -85,6 +85,7 @@
       color: var(--notification-title-color);
       line-height: var(--notification-title-line-height);
       font-weight: var(--notification-title-font-weight);
+      padding: var(--notification-title-padding);
     }
 
     @include e(body) {
