--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -341,9 +341,10 @@
   --notification-title-font-size: 14px;
   --notification-title-line-height: 22px;
   --notification-title-font-weight: 400;
+  --notification-title-padding: 0 0 2px;
   --notification-color: #616161;
   --notification-font-size: 12px;
   --notification-line-height: 18px;
-  --notification-body-padding: 4px 0 0;
+  --notification-body-padding: 2px 0 0;
   --notification-footer-padding: 20px 0 0;
 }
