--- a/components/notification/style/index.scss
+++ b/components/notification/style/index.scss
@@ -1,4 +1,5 @@
-@import "./mixins";
+@import '../../style/core/index';
+@import './mixins';
 
 @include b(notification-container) {
   position: fixed;
