--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -16,7 +16,7 @@
   --color-link: var(--theme-primary); // 链接
 
   //阴影
-  --box-shadow-light: 0 2px 8px rgba(0, 0, 0, 0.1), 0 0 6px rgba(0, 0, 0, 0.1);
+  --box-shadow-light: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
   --box-shadow-dark: 0 4px 12px rgba(0, 0, 0, 0.2);
 
   // 背景色
