chore: update inlineIndent computation

--- a/components/menu/style/submenu.scss
+++ b/components/menu/style/submenu.scss
@@ -40,7 +40,7 @@
   @include m(level-1) {
     min-width: auto;
 
-    @include e(title) {
+    @include e(title-level-1) {
       @include item-first-level();
     }
   }
