chore: update background color of divider

--- a/components/menu/style/dark-theme.scss
+++ b/components/menu/style/dark-theme.scss
@@ -123,6 +123,10 @@
       }
     }
 
+    @include e(divider) {
+      background-color: var(--color-text-caption);
+    }
+
     @include m(collapsed) {
       @include b(menu-submenu) {
         @include m(active) {
