--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -209,7 +209,7 @@
   --menuitem-active-color: var(--theme-primary);
   --menuitem-active-bg-color: rgba(0, 188, 112, 0.0625);
   --menuitem-disabled-color: rgba(0, 0, 0, 0.25);
-  --menuitem-divider-bg-color: #f1f1f1;
+  --menuitem-divider-bg-color: #e6e6e6;
   --menuitem-horizontal-padding: 20px;
   --menuitem-height: 44px;
   --menuitem-first-level-height: 52px;
