--- a/site/pages/Components/style.scss
+++ b/site/pages/Components/style.scss
@@ -40,6 +40,11 @@
   }
 }
 
+.site-page-loading {
+  //margin-top: 40vh;
+  //margin-left: 40vw;
+}
+
 .scroll-to-top {
   position: fixed;
   right: 30px;
