fix: centered props default value change padding in centered: false

--- a/components/modal/style/component.scss
+++ b/components/modal/style/component.scss
@@ -31,9 +31,10 @@ $zarmWebPrefixCls: zw-modal;
     max-width: 95%;
   }
 
-  @include e(popup) {
+  @include m(popup) {
     @include m(top) {
       align-items: baseline;
+      padding: 100px 0;
 
       .#{$zarmPrefixCls}--center {
         margin: unset;
