--- a/components/drawer/style/component.scss
+++ b/components/drawer/style/component.scss
@@ -31,19 +31,23 @@
   }
 
   @include e(close) {
-    position: absolute;
-    left: -33px;
-    top: 0;
     width: 33px;
     height: 52px;
-    padding: 0;
-    background-image: url('../style/images/tab-first@2x.png');
+    position: absolute;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background-color: #fff;
+    box-shadow: -6px 5px 4px 1px #1f1f1f30;
+    transform-origin: right center;
+    transform: perspective(4px) rotateY(-4deg);
     background-size: 33px 52px;
-    background-color: transparent;
     cursor: pointer;
     border: none;
     color: #bcbcbc;
     transition: all 300ms ease-in-out;
+    left: -33px;
+    top: 0;
+    padding: 0;
 
     i {
       position: absolute;
