--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -21,7 +21,7 @@
 
   // 背景色
   // --background-active: #e6e6e6;
-  --background-disabled: #fafafa;
+  --background-disabled: #f2f2f2;
 
   // 边框色
   --border-color: #dcdcdc;
@@ -174,6 +174,8 @@
   --checkbox-size: 14px;
   --checkbox-radius: var(--radius-sm);
   --checkbox-border-color: var(--border-color);
+  --checkbox-disabled-color: #bcbcbc;
+  --checkbox-color: #616161;
 
   // Loading
   --loading-height-sm: 12px;
@@ -196,6 +198,7 @@
   --radio-size: 14px;
   --radio-radius: var(--radius-circle);
   --radio-border-color: var(--border-color);
+  --radio-disabled-color: #bcbcbc;
   --radio-color: #616161;
 
   // Menu
