--- a/components/drawer/style/component.scss
+++ b/components/drawer/style/component.scss
@@ -31,30 +31,36 @@
   }
 
   @include e(close) {
-    width: 33px;
-    height: 52px;
+    display: block;
     position: absolute;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    background-color: #fff;
-    box-shadow: -6px 5px 4px 1px #1f1f1f30;
-    transform-origin: right center;
-    transform: perspective(4px) rotateY(-4deg);
-    background-size: 33px 52px;
-    cursor: pointer;
     border: none;
     color: #bcbcbc;
-    transition: all 300ms ease-in-out;
-    left: -33px;
-    top: 0;
     padding: 0;
+    cursor: pointer;
+
+    span {
+      display: block;
+      width: 60px;
+      height: 52px;
+      position: absolute;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 5px;
+      background-color: #fff;
+      box-shadow: -6px 5px 4px 1px #1f1f1f30;
+      transform-origin: right center;
+      transform: perspective(7px) rotateY(-6deg);
+      border: none;
+      color: #bcbcbc;
+      transition: all 300ms ease-in-out;
+      left: -60px;
+      top: 0;
+      padding: 0;
+    }
 
     i {
       position: absolute;
       top: 18px;
-      left: 13px;
-      transform: perspective(6px) rotateY(4deg);
-      transform-origin: center center;
+      left: -23px;
     }
 
     &:hover {
