--- a/site/styles/pages/dropdown.scss
+++ b/site/styles/pages/dropdown.scss
@@ -1,15 +1,5 @@
 .dropdown-page {
-  .dropdown-trigger-box {
-    & > div {
-      display: inline-block;
-      margin-right: 8px;
-      margin-bottom: 8px;
-    }
-  }
-
-  .modal-inner-btn {
-    & > div {
-      display: inline-block;
-    }
+  .zw-button {
+    margin-right: 8px;
   }
 }
