--- a/components/drawer/style/index.scss
+++ b/components/drawer/style/index.scss
@@ -1,5 +1,2 @@
-@import '../../style/themes/default';
-@import './component';
-@import 'node_modules/zarm/lib/popup/style/index.scss';
-@import 'node_modules/zarm/lib/mask/style/index.scss';
-@import 'node_modules/zarm/lib/style/index.scss';
+@import '../../style/core/index';
+@import 'component';
