--- a/components/mask/style/index.scss
+++ b/components/mask/style/index.scss
@@ -1,2 +1,2 @@
-@import '../../style/themes/default';
-@import './component';
+@import '../../style/core/index';
+@import 'zarm/es/mask/style/component.scss';
