--- a/components/popover/style/component.scss
+++ b/components/popover/style/component.scss
@@ -6,16 +6,15 @@
     padding: 10px 18px;
     z-index: 999;
     background-color: #fff;
-    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ccc;
+    border-radius: 3px;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.1));
 
     &[x-placement^=left] {
       margin-right: 10px;
 
       .ui-popover-arrow {
         right: -4px;
-        border-right-width: 1px;
-        border-top-width: 1px;
+        text-align: center;
       }
     }
 
@@ -24,8 +23,6 @@
 
       .ui-popover-arrow {
         left: -4px;
-        border-left-width: 1px;
-        border-bottom-width: 1px;
       }
     }
 
@@ -34,8 +31,6 @@
 
       .ui-popover-arrow {
         bottom: -4px;
-        border-right-width: 1px;
-        border-bottom-width: 1px;
       }
     }
 
@@ -44,8 +39,6 @@
 
       .ui-popover-arrow {
         top: -4px;
-        border-left-width: 1px;
-        border-top-width: 1px;
       }
     }
 
