--- a/components/popover/style/component.scss
+++ b/components/popover/style/component.scss
@@ -1,96 +1,99 @@
-.ui-popover {
-  display: inline-block;
+.custom-content,
+.custom-arrow-content {
+  padding: 6px 12px;
+  background: #fff;
+  font-size: 12px;
+  border-radius: 3px;
+  filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.1));
+  z-index: 103;
+}
+@at-root
+.custom-arrow-content {
+  &[x-placement^=left] {
+    margin-right: 10px;
 
-  &-content {
-    display: none;
-    padding: 10px 18px;
-    z-index: 999;
-    background-color: #fff;
-    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ccc;
-
-    &[x-placement^=left] {
-      margin-right: 10px;
-
-      .ui-popover-arrow {
-        right: -4px;
-        border-right-width: 1px;
-        border-top-width: 1px;
-      }
-    }
-
-    &[x-placement^=right] {
-      margin-left: 10px;
-
-      .ui-popover-arrow {
-        left: -4px;
-        border-left-width: 1px;
-        border-bottom-width: 1px;
-      }
-    }
-
-    &[x-placement^=top] {
-      margin-bottom: 10px;
-
-      .ui-popover-arrow {
-        bottom: -4px;
-        border-right-width: 1px;
-        border-bottom-width: 1px;
-      }
-    }
-
-    &[x-placement^=bottom] {
-      margin-top: 10px;
-
-      .ui-popover-arrow {
-        top: -4px;
-        border-left-width: 1px;
-        border-top-width: 1px;
-      }
-    }
-
-    &-show {
-      display: block;
-    }
-
-    &-radius {
-      border-radius: 2px;
+    .za-popper__arrow {
+      right: -4px;
+      text-align: center;
     }
   }
 
-  &-arrow {
-    position: absolute;
-    width: 5px;
-    height: 5px;
-    border-width: 0;
-    border-style: solid;
-    border-color: #ccc;
-    background: #fff;
-    transform: rotate(45deg);
-  }
+  &[x-placement^=right] {
+    margin-left: 10px;
 
-  &-mask {
-    position: fixed;
-    display: none;
-    z-index: 998;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #000;
-    opacity: 0.2;
-
-    &-show {
-      display: block;
+    .za-popper__arrow {
+      left: -4px;
     }
   }
 
-  &-actions {
-    padding-top: 10px;
-    text-align: right;
+  &[x-placement^=top] {
+    margin-bottom: 10px;
 
-    button {
-      margin-left: 10px;
+    .za-popper__arrow {
+      bottom: -4px;
     }
+  }
+
+  &[x-placement^=bottom] {
+    margin-top: 10px;
+
+    .za-popper__arrow {
+      top: -4px;
+    }
+  }
+
+  &-show {
+    display: block;
+  }
+
+  &-radius {
+    border-radius: 2px;
   }
 }
+
+.za-popper__arrow {
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  background: #fff;
+}
+// 显示方向
+.direction-demo {
+  .za-button {
+    width: 60px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+
+  .za-cell__content {
+    padding: 15px 0;
+    justify-content: center;
+  }
+}
+
+.za-popper-mask {
+  position: fixed;
+  display: none;
+  z-index: 102;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #000;
+  opacity: 0.2;
+
+  &-show {
+    display: block;
+  }
+}
+
+//&-actions {
+//  padding-top: 10px;
+//  text-align: right;
+//
+//  button {
+//    margin-left: 10px;
+//  }
+//}
