--- a/site/components/Markdown/style.scss
+++ b/site/components/Markdown/style.scss
@@ -133,6 +133,12 @@
     margin: 32px 24px;
     // border-top: 1px solid #eaeefb;
 
+    .popover-block {
+      margin: 3px;
+      width: 60px;
+      padding: 0;
+    }
+
     .rows {
       margin-bottom: 16px;
 
