--- a/components/style/components.scss
+++ b/components/style/components.scss
@@ -9,7 +9,8 @@
 @import '../dropdown/style';
 @import '../drawer/style';
 @import '../form/style';
-@import '../grid/style';
+@import '../grid/style/row';
+@import '../grid/style/col';
 @import '../icon/style';
 @import '../input/style';
 @import '../layout/style';
