--- a/site/styles/pages/grid.scss
+++ b/site/styles/pages/grid.scss
@@ -1,58 +1,50 @@
-.grid-page {
-  .za-row {
-    text-align: center;
-    color: #fff;
+@import "../themes/default.scss";
 
-    .col:not(.gutter-row) {
-      padding: 16px 0;
-      font-size: 14px;
-      color: #fff;
-      background: #00bc70;
+.grid-page {
+  .marginB-20 {
+    margin-bottom: 20px;
+  }
+
+  .marginTB-20 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .row-bg {
+    background-color: rgba(128, 128, 128, 0.08);
+  }
+
+  .zarm-row {
+    .zarm-col {
+      > div {
+        background: $theme-primary;
+        color: #fff;
+        text-align: center;
+        height: 50px;
+        line-height: 50px;
+      }
 
       &:nth-child(2n + 1) {
-        background: rgba(0, 188, 122, .5);
+        > div {
+          background: $theme-primary-dark;
+        }
+      }
+
+      .col-height-8 {
+        height: 80px;
+      }
+
+      .col-height-10 {
+        height: 100px;
       }
     }
   }
 
-  .za-row + .za-row {
-    margin-top: 24px;
-  }
-
-  .grid-box {
-    padding: 10px 0;
-    background: #00bc70;
-  }
-
-  p {
-    color: #fff !important;
-  }
-
-  .height-50 {
-    height: 50px;
-    line-height: 50px;
-  }
-
-  .height-80 {
-    height: 80px;
-    line-height: 80px;
-  }
-
-  .height-100 {
+  .zarm-row.row-stretch {
     height: 100px;
-    line-height: 100px;
-  }
 
-  .height-120 {
-    height: 120px;
-    line-height: 120px;
-  }
-
-  .za-row--flex {
-    background: #f5f5f5;
-
-    div {
-      margin: 16px 0;
+    > div {
+      height: 100%;
     }
   }
 }
