--- a/components/popover/style/component.scss
+++ b/components/popover/style/component.scss
@@ -1,96 +1,56 @@
-.ui-popover {
-  display: inline-block;
-
-  &-content {
-    display: none;
-    padding: 10px 18px;
-    z-index: 999;
-    background-color: #fff;
-    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ccc;
-
-    &[x-placement^=left] {
-      margin-right: 10px;
-
-      .ui-popover-arrow {
-        right: -4px;
-        border-right-width: 1px;
-        border-top-width: 1px;
-      }
-    }
-
-    &[x-placement^=right] {
-      margin-left: 10px;
-
-      .ui-popover-arrow {
-        left: -4px;
-        border-left-width: 1px;
-        border-bottom-width: 1px;
-      }
-    }
-
-    &[x-placement^=top] {
-      margin-bottom: 10px;
-
-      .ui-popover-arrow {
-        bottom: -4px;
-        border-right-width: 1px;
-        border-bottom-width: 1px;
-      }
-    }
-
-    &[x-placement^=bottom] {
-      margin-top: 10px;
-
-      .ui-popover-arrow {
-        top: -4px;
-        border-left-width: 1px;
-        border-top-width: 1px;
-      }
-    }
-
-    &-show {
-      display: block;
-    }
-
-    &-radius {
-      border-radius: 2px;
-    }
-  }
-
-  &-arrow {
+@include b(popover) {
+  padding: 6px 12px;
+  background: #fff;
+  transform: translateX(-50%) rotate(45deg);
+  font-size: 12px;
+  border-radius: 3px;
+  filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.1));
+  z-index: 103;
+  @include b(popover__arrow) {
     position: absolute;
-    width: 5px;
-    height: 5px;
-    border-width: 0;
-    border-style: solid;
-    border-color: #ccc;
+    width: 8px;
+    height: 8px;
     background: #fff;
-    transform: rotate(45deg);
+    transform: translateX(-50%) rotate(45deg);
   }
 
-  &-mask {
-    position: fixed;
-    display: none;
-    z-index: 998;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #000;
-    opacity: 0.2;
+  &[x-placement^=top] {
+    margin-bottom: 10px;
 
-    &-show {
-      display: block;
+    @include b(popover__arrow) {
+      bottom: -4px;
     }
   }
 
-  &-actions {
-    padding-top: 10px;
-    text-align: right;
+  &[x-placement^=right] {
+    margin-left: 10px;
 
-    button {
-      margin-left: 10px;
+    @include b(popover__arrow) {
+      left: 0;
     }
+  }
+
+  &[x-placement^=bottom] {
+    margin-top: 10px;
+
+    @include b(popover__arrow) {
+      top: -4px;
+    }
+  }
+
+  &[x-placement^=left] {
+    margin-right: 10px;
+
+    @include b(popover__arrow) {
+      right: -8px;
+    }
+  }
+
+  &-show {
+    display: block;
+  }
+
+  &-radius {
+    border-radius: 2px;
   }
 }
